--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>NotHotDog</title>
+    <title>AorB</title>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
     <script src="predict.js"></script>
@@ -15,8 +15,8 @@
     <form>
 
         <img src="assets/images/header.png"/>
-        <h1>Welcome to <strong>NotHotDog</strong></h1>
-        <div>Use the <a target="_new" href="https://southcentralus.dev.cognitive.microsoft.com/docs/services/eb68250e4e954d9bae0c2650db79c653/operations/58acd3c1ef062f0344a42814">Microsoft Custom Vision Service Prediction API</a> to analyze and predict Hot Dog or Not Hot Dog.</div>
+        <h1>Welcome to <strong>AorB</strong></h1>
+        <div>Use the <a target="_new" href="https://southcentralus.dev.cognitive.microsoft.com/docs/services/eb68250e4e954d9bae0c2650db79c653/operations/58acd3c1ef062f0344a42814">Microsoft Custom Vision Service Prediction API</a> to analyze and predict An or Binh.</div>
 
         <div class="stepLabel">step one</div>
         <div><strong>Browse (...)</strong> to find an image on your local file system.</div>
@@ -25,7 +25,7 @@
         <div id="previewImage"></div>
         <div id="analysisResults"></div>
         <div class="stepLabel">step two</div>
-        <div>Click <strong>Predict</strong> to view NotHotDog predictions.</div>
+        <div>Click <strong>Predict</strong> to view AorB predictions.</div>
         <input disabled=true type="button" id="analyze_button" value="Predict" />
         
     </form>
